# freedb

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md
apps/desktop/: Cargo.toml
apps/desktop/assets/: freedb-icon.icns
apps/desktop/macos/: Info.plist
apps/desktop/nsis/: build_windows_installer.nsi
apps/desktop/src/: app.rs  autocomplete.rs  icon.rs  main.rs
apps/desktop/wix/: LICENSE.rtf  main.wxs
crates/app-services/: Cargo.toml
crates/app-services/src/: lib.rs
crates/connection-pool/: Cargo.toml
crates/connection-pool/src/: lib.rs
crates/connection-store/: Cargo.toml
crates/connection-store/src/: lib.rs
crates/core-domain/: Cargo.toml
crates/core-domain/src/: lib.rs
crates/driver-api/: Cargo.toml
crates/driver-api/src/: lib.rs
crates/driver-mysql/: Cargo.toml
crates/driver-mysql/src/: lib.rs
crates/driver-postgres/: Cargo.toml
crates/driver-postgres/src/: lib.rs
crates/export-service/: Cargo.toml
crates/export-service/src/: lib.rs  sql_dump.rs
crates/history-store/: Cargo.toml
crates/history-store/src/: lib.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs
crates/secure-store/: Cargo.toml
crates/secure-store/src/: lib.rs
crates/session-manager/: Cargo.toml
crates/session-manager/src/: lib.rs
crates/ssh-tunnel/: Cargo.toml
crates/ssh-tunnel/src/: lib.rs
scripts/: build_macos_app.sh  build_windows_installer.sh  build_windows_msi.ps1  package.sh  update-brew.sh
