[package]
name = "connection-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
core-domain = { path = "../core-domain" }
dirs.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
