[package]
name = "session-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
connection-pool = { path = "../connection-pool" }
core-domain = { path = "../core-domain" }
driver-api = { path = "../driver-api" }
parking_lot.workspace = true
ssh-tunnel = { path = "../ssh-tunnel" }
tokio.workspace = true
tracing.workspace = true
